// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar component renders correctly 1`] = `
<aside
  className="site-sidebar"
>
  <div
    className="ds-u-display--flex ds-u-align-items--center ds-u-border-bottom--1 ds-u-padding-y--2 ds-u-margin-bottom--4"
  >
    <img
      alt="place name"
      className="ds-u-margin-right--2"
      height="40"
      src="/static/img/states/place id.svg"
      width="40"
    />
    <h1>
      place name
    </h1>
  </div>
  <VerticalNav
    collapsed={false}
    items={
      Array [
        Object {
          "children": Array [
            Object {
              "id": "apd-state-profile-office",
              "label": "State Director and Office Address",
            },
            Object {
              "id": "apd-state-profile-key-personnel",
              "label": "Key Personnel and Program Management",
            },
          ],
          "id": "apd-state-profile",
          "label": "Key State Personnel",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "apd-summary",
          "label": "Program Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "prev-activities-outline",
              "label": "Prior Activities Overview",
            },
            Object {
              "id": "prev-activities-table",
              "label": "Actual Costs",
            },
          ],
          "id": "previous-activities",
          "label": "Results of Previous Activities",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "activities-list",
              "label": "Activity List",
              "onClick": [Function],
              "url": "activities",
            },
          ],
          "id": "activities",
          "label": "Program Activities",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "schedule-summary",
          "label": "Activity Schedule Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "budget-summary-table",
              "label": "Summary Budget Table",
            },
            Object {
              "id": "budget-federal-by-quarter",
              "label": "Quarterly Federal Share",
            },
            Object {
              "id": "budget-incentive-by-quarter",
              "label": "Estimated Quarterly Incentive Payments",
            },
          ],
          "id": "proposed-budget",
          "label": "Proposed Budget",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "assurances-compliance",
          "label": "Assurances and Compliance",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "executive-summary-summary",
              "label": "Activities Summary",
            },
            Object {
              "id": "executive-summary-budget-table",
              "label": "Program Budget Tables",
            },
          ],
          "id": "executive-summary",
          "label": "Executive Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "export",
          "label": "Export and Submit",
          "onClick": [Function],
          "url": "#",
        },
      ]
    }
    selectedId="some section"
  />
</aside>
`;

exports[`Sidebar component renders the active section correctly if it is an activity section 1`] = `
<aside
  className="site-sidebar"
>
  <div
    className="ds-u-display--flex ds-u-align-items--center ds-u-border-bottom--1 ds-u-padding-y--2 ds-u-margin-bottom--4"
  >
    <img
      alt="place name"
      className="ds-u-margin-right--2"
      height="40"
      src="/static/img/states/place id.svg"
      width="40"
    />
    <h1>
      place name
    </h1>
  </div>
  <VerticalNav
    collapsed={false}
    items={
      Array [
        Object {
          "children": Array [
            Object {
              "id": "apd-state-profile-office",
              "label": "State Director and Office Address",
            },
            Object {
              "id": "apd-state-profile-key-personnel",
              "label": "Key Personnel and Program Management",
            },
          ],
          "id": "apd-state-profile",
          "label": "Key State Personnel",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "apd-summary",
          "label": "Program Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "prev-activities-outline",
              "label": "Prior Activities Overview",
            },
            Object {
              "id": "prev-activities-table",
              "label": "Actual Costs",
            },
          ],
          "id": "previous-activities",
          "label": "Results of Previous Activities",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "activities-list",
              "label": "Activity List",
              "onClick": [Function],
              "url": "activities",
            },
          ],
          "id": "activities",
          "items": Array [
            Object {
              "id": "activities-list",
              "label": "Activity List",
              "onClick": [Function],
              "url": "activities",
            },
            Object {
              "id": "activity-key 1234",
              "items": Array [
                Object {
                  "id": "activity-key 1234-overview",
                  "label": "Activity overview",
                  "onClick": [Function],
                  "url": "activity/0/overview",
                },
                Object {
                  "id": "activity-key 1234-okrs",
                  "label": "Objectives and key results",
                  "onClick": [Function],
                  "url": "activity/0/okrs",
                },
                Object {
                  "id": "activity-key 1234-state-costs",
                  "label": "State cost categories",
                  "onClick": [Function],
                  "url": "activity/0/state-costs",
                },
                Object {
                  "id": "activity-key 1234-contractor-costs",
                  "label": "Private contractor costs",
                  "onClick": [Function],
                  "url": "activity/0/contractor-costs",
                },
                Object {
                  "id": "activity-key 1234-cost-allocation",
                  "label": "Cost allocation",
                  "onClick": [Function],
                  "url": "activity/0/cost-allocation",
                },
                Object {
                  "id": "activity-key 1234-ffp",
                  "label": "FFP and budget",
                  "onClick": [Function],
                  "url": "activity/0/ffp",
                },
              ],
              "label": "Activity 1",
              "onClick": [Function],
              "url": null,
            },
            Object {
              "id": "activity-key 4321",
              "items": null,
              "label": "Activity 2",
              "onClick": [Function],
              "url": "activity/1",
            },
          ],
          "label": "Program Activities",
          "onClick": [Function],
          "url": undefined,
        },
        Object {
          "id": "schedule-summary",
          "label": "Activity Schedule Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "budget-summary-table",
              "label": "Summary Budget Table",
            },
            Object {
              "id": "budget-federal-by-quarter",
              "label": "Quarterly Federal Share",
            },
            Object {
              "id": "budget-incentive-by-quarter",
              "label": "Estimated Quarterly Incentive Payments",
            },
          ],
          "id": "proposed-budget",
          "label": "Proposed Budget",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "assurances-compliance",
          "label": "Assurances and Compliance",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "executive-summary-summary",
              "label": "Activities Summary",
            },
            Object {
              "id": "executive-summary-budget-table",
              "label": "Program Budget Tables",
            },
          ],
          "id": "executive-summary",
          "label": "Executive Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "export",
          "label": "Export and Submit",
          "onClick": [Function],
          "url": "#",
        },
      ]
    }
    selectedId="activity-key 1234-okrs"
  />
</aside>
`;

exports[`Sidebar component renders the active section with its children open 1`] = `
<aside
  className="site-sidebar"
>
  <div
    className="ds-u-display--flex ds-u-align-items--center ds-u-border-bottom--1 ds-u-padding-y--2 ds-u-margin-bottom--4"
  >
    <img
      alt="place name"
      className="ds-u-margin-right--2"
      height="40"
      src="/static/img/states/place id.svg"
      width="40"
    />
    <h1>
      place name
    </h1>
  </div>
  <VerticalNav
    collapsed={false}
    items={
      Array [
        Object {
          "children": Array [
            Object {
              "id": "apd-state-profile-office",
              "label": "State Director and Office Address",
            },
            Object {
              "id": "apd-state-profile-key-personnel",
              "label": "Key Personnel and Program Management",
            },
          ],
          "id": "apd-state-profile",
          "label": "Key State Personnel",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "apd-summary",
          "label": "Program Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "prev-activities-outline",
              "label": "Prior Activities Overview",
            },
            Object {
              "id": "prev-activities-table",
              "label": "Actual Costs",
            },
          ],
          "id": "previous-activities",
          "label": "Results of Previous Activities",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "activities-list",
              "label": "Activity List",
              "onClick": [Function],
              "url": "activities",
            },
          ],
          "id": "activities",
          "label": "Program Activities",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "schedule-summary",
          "label": "Activity Schedule Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "budget-summary-table",
              "label": "Summary Budget Table",
            },
            Object {
              "id": "budget-federal-by-quarter",
              "label": "Quarterly Federal Share",
            },
            Object {
              "id": "budget-incentive-by-quarter",
              "label": "Estimated Quarterly Incentive Payments",
            },
          ],
          "id": "proposed-budget",
          "items": Array [
            Object {
              "id": "budget-summary-table",
              "label": "Summary Budget Table",
              "onClick": [Function],
              "url": "#budget-summary-table",
            },
            Object {
              "id": "budget-federal-by-quarter",
              "label": "Quarterly Federal Share",
              "onClick": [Function],
              "url": "#budget-federal-by-quarter",
            },
            Object {
              "id": "budget-incentive-by-quarter",
              "label": "Estimated Quarterly Incentive Payments",
              "onClick": [Function],
              "url": "#budget-incentive-by-quarter",
            },
          ],
          "label": "Proposed Budget",
          "onClick": [Function],
          "url": undefined,
        },
        Object {
          "id": "assurances-compliance",
          "label": "Assurances and Compliance",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "executive-summary-summary",
              "label": "Activities Summary",
            },
            Object {
              "id": "executive-summary-budget-table",
              "label": "Program Budget Tables",
            },
          ],
          "id": "executive-summary",
          "label": "Executive Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "export",
          "label": "Export and Submit",
          "onClick": [Function],
          "url": "#",
        },
      ]
    }
    selectedId="proposed-budget"
  />
</aside>
`;

exports[`Sidebar component uses the PNG file extension for territories (these are not SVGs) 1`] = `
<aside
  className="site-sidebar"
>
  <div
    className="ds-u-display--flex ds-u-align-items--center ds-u-border-bottom--1 ds-u-padding-y--2 ds-u-margin-bottom--4"
  >
    <img
      alt="U.S. Virgin Islands"
      className="ds-u-margin-right--2"
      height="40"
      src="/static/img/states/vi.png"
      width="40"
    />
    <h1>
      U.S. Virgin Islands
    </h1>
  </div>
  <VerticalNav
    collapsed={false}
    items={
      Array [
        Object {
          "children": Array [
            Object {
              "id": "apd-state-profile-office",
              "label": "State Director and Office Address",
            },
            Object {
              "id": "apd-state-profile-key-personnel",
              "label": "Key Personnel and Program Management",
            },
          ],
          "id": "apd-state-profile",
          "label": "Key State Personnel",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "apd-summary",
          "label": "Program Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "prev-activities-outline",
              "label": "Prior Activities Overview",
            },
            Object {
              "id": "prev-activities-table",
              "label": "Actual Costs",
            },
          ],
          "id": "previous-activities",
          "label": "Results of Previous Activities",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "activities-list",
              "label": "Activity List",
              "onClick": [Function],
              "url": "activities",
            },
          ],
          "id": "activities",
          "label": "Program Activities",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "schedule-summary",
          "label": "Activity Schedule Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "budget-summary-table",
              "label": "Summary Budget Table",
            },
            Object {
              "id": "budget-federal-by-quarter",
              "label": "Quarterly Federal Share",
            },
            Object {
              "id": "budget-incentive-by-quarter",
              "label": "Estimated Quarterly Incentive Payments",
            },
          ],
          "id": "proposed-budget",
          "label": "Proposed Budget",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "assurances-compliance",
          "label": "Assurances and Compliance",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "children": Array [
            Object {
              "id": "executive-summary-summary",
              "label": "Activities Summary",
            },
            Object {
              "id": "executive-summary-budget-table",
              "label": "Program Budget Tables",
            },
          ],
          "id": "executive-summary",
          "label": "Executive Summary",
          "onClick": [Function],
          "url": "#",
        },
        Object {
          "id": "export",
          "label": "Export and Submit",
          "onClick": [Function],
          "url": "#",
        },
      ]
    }
    selectedId="some section"
  />
</aside>
`;
